--- a/MVVM_FindSong/SongCell.xib
+++ b/MVVM_FindSong/SongCell.xib
@@ -29,11 +29,11 @@
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgC.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="W1r-wy-uAw">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultCover60.png" translatesAutoresizingMaskIntoConstraints="NO" id="W1r-wy-uAw">
                     <rect key="frame" x="8" y="8" width="60" height="60"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="CZv-uN-Tay"/>
+                        <constraint firstAttribute="height" constant="60" id="BHe-3Y-dhm"/>
                         <constraint firstAttribute="width" constant="60" id="gWg-Sg-32d"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
@@ -42,11 +42,6 @@
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="CZv-uN-Tay"/>
-                        </mask>
-                    </variation>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -83,6 +78,6 @@
         </view>
     </objects>
     <resources>
-        <image name="imgC.jpg" width="60" height="60"/>
+        <image name="defaultCover60.png" width="60" height="60"/>
     </resources>
 </document>
